--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
-    "react-router":"7.0.2",
+    "react-router-dom": "^6.15.0",
     "axios": "1.7.9"
   },
   "scripts": {
