--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: generic 
 sudo: required
 services:
-  -docker
+  - docker
 
 before_install:
+  - docker kill ercankurtoglu/react-test
   - docker build -t ercankurtoglu/react-test -f ./client/Dockerfile.dev ./client
 
 script:
