--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - '80:80'
   server:
     image: "ercankurtoglu/multi-server"
+    depends_on:
+      - api
+      - client  
     mem_limit: 128m
     hostname: api
     environment:
