--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     hostname: nginx
     ports:
       - '80:80'
-  server:
+  api:
     image: "ercankurtoglu/multi-server"
     mem_limit: 128m
     hostname: api
