--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     hostname: nginx
     ports:
       - '80:80'
-  api:
+  server:
     image: "ercankurtoglu/multi-server"
     mem_limit: 128m
     hostname: api
@@ -17,6 +17,7 @@ services:
       - PGDATABASE=$PGDATABASE
       - PGPASSWORD=$PGPASSWORD
       - PGPORT=$PGPORT
+      - NODE_ENV=$NODE_ENV
   client:
     image: "ercankurtoglu/multi-client"
     mem_limit: 128m
